# nw_motion_optimization

./: CMakeLists.txt  README.md  package.xml
launch/: riemo_mico_server.launch  riemo_mico_server_with_robot_emulator.launch  riemo_mico_vis.launch  shutdown_riemo_mico_server.launch  shutdown_riemo_mico_server_with_robot_emulator.launch
scripts/: .docker_tools.py  config.yaml  riemo_mico_server_shutdown.sh  start_motion_optimion_emulator.sh  start_motion_optimization_visualizer.sh  start_motion_optimiztion_service.sh  stop_motion_optimization_emulator.sh  stop_motion_optimization_service.sh  stop_motion_optimization_visualizer.sh
